:bug: fix(twitter-card)

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -28,16 +28,26 @@
     />
     <link rel="manifest" href="%PUBLIC_URL%/favicons/site.webmanifest" />
 
-    <meta property="image" content="%PUBLIC_URL%/og.png" />
+    <meta
+      property="image"
+      content="https://spotify-profile-visualizer.herokuapp.com/og.png"
+    />
     <meta property="og:title" content="Spotify Profile" />
     <meta
       property="og:description"
       content="Web app for visualizing personalized Spotify data"
     />
-    <meta property="og:image" content="%PUBLIC_URL%/og.png" />
+    <meta
+      property="og:image"
+      content="https://spotify-profile-visualizer.herokuapp.com/og.png"
+    />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Spotify Profile" />
+    <meta
+      name="twitter:image"
+      content="https://spotify-profile-visualizer.herokuapp.com/og.png"
+    />
     <meta
       name="twitter:description"
       content="Web app for visualizing personalized Spotify data"
